--- a/inputs/token.in
+++ b/inputs/token.in
@@ -20,6 +20,14 @@ sender: token = token {
 receiver: address = aleo1guxnynjgrt6v5xy9vud7g22dw4drvwurc3gtffxzzzstq4w9kc8s7tqcsg;
 amount: u64 = 100u64;
 
+[transfer_all_private]
+sender: token = token {
+  owner: aleo18sdtxugj8crjwenn408hwfpsr30ekhyqa5lq9elq5s6hp5y95g9sr0kyws,
+  amount: 100u64,
+  _nonce: 605539668180949187295743778530546856687525967507920065987457873871425131122group
+};
+receiver: address = aleo1guxnynjgrt6v5xy9vud7g22dw4drvwurc3gtffxzzzstq4w9kc8s7tqcsg;
+
 
 [transfer_private_to_public]
 sender: token = token {
